Use new exception handling settings
- Configuration-driven, instead of event-driven

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         }
     ],
     "homepage": "http://conference.phpbenelux.eu/2013/sessions/",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.1.*",
